--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_16.0.app
+
 jobs:
   build:
     strategy:
@@ -18,7 +21,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Build
+      - name: Run swift build
         run: swift build
-      - name: Run tests
+      - name: Run swift test
         run: swift test
