--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,20 +8,28 @@ on:
     branches:
       - main
 
-env:
-  DEVELOPER_DIR: /Applications/Xcode_16.0.app
-
 jobs:
-  build:
+
+  test-on-macos:
+    runs-on: macos-latest
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-
-    runs-on: ${{ matrix.os }}
-
+        xcode-version: ['16.0', '15.4', '14.3.1']
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
     steps:
       - uses: actions/checkout@v4
       - name: Run swift build
         run: swift build
       - name: Run swift test
+        if: matrix.xcode-version == '16.0'
         run: swift test --enable-swift-testing
+
+  test-on-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run swift build
+        run: swift build
+#      - name: Run swift test
+#        run: swift test --enable-swift-testing
