--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,16 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   test-on-macos:
-    runs-on: macos-latest
     strategy:
       matrix:
         xcode-version: ['16.0', '15.4', '15.2', '14.3.1']
+    runs-on: macos-latest
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
     steps:
@@ -23,9 +21,18 @@ jobs:
       - name: Run swift test
         run: swift test
   test-on-linux:
+    strategy:
+      matrix:
+        swift-version: ['6.0-snapshot', '5.10.1', '5.9.2', '5.8.1', '5.7.3']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install Swift ${{ matrix.swift-version }}
+        run: |
+          curl -L https://swiftlang.github.io/swiftly/swiftly-install.sh | bash -s -- -y
+          swiftly install ${{ matrix.swift-version }}
+      - name: Run swift --version
+        run: swift --version
       - name: Run swift build
         run: swift build
       - name: Run swift test
