--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
   test-on-linux:
     strategy:
       matrix:
-        swift-version: ['6.0-snapshot', '5.10.1', '5.9.2', '5.8.1', '5.7.3']
+        swift-version: ['6.0-snapshot', '5.10.1', '5.9.2', '5.8.1']
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
