--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
   test-on-macos:
     strategy:
       matrix:
-        xcode-version: ['16.0', '15.4', '15.2', '14.3.1']
-    runs-on: macos-latest
+        xcode-version: ['16.1', '15.4', '15.2']
+    runs-on: macos-14
     timeout-minutes: 3
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         swift-version: ['6.0', '5.10', '5.9', '5.8']
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 3
     steps:
       - uses: actions/checkout@v4
