--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
   test-on-macos:
     strategy:
       matrix:
-        xcode-version: ['16.1', '15.4', '15.2']
-    runs-on: macos-14
+        xcode-version: ['16.3']
+    runs-on: macos-15
     timeout-minutes: 3
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
@@ -25,17 +25,22 @@ jobs:
   test-on-linux:
     strategy:
       matrix:
-        swift-version: ['6.0', '5.10', '5.9', '5.8']
-    runs-on: ubuntu-22.04
+        swift-version: ['6.1', '6.0', '5.10', '5.9', '5.8']
+    runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
       - uses: actions/checkout@v4
+      - name: Install Swiftly
+        run: >
+          curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz &&
+          tar zxf swiftly-$(uname -m).tar.gz &&
+          ./swiftly init --quiet-shell-followup &&
+          . ~/.local/share/swiftly/env.sh &&
+          hash -r
       - name: Install Swift ${{ matrix.swift-version }}
         run: |
-          curl -L https://swiftlang.github.io/swiftly/swiftly-install.sh | bash -s -- -y
-          swiftly install ${{ matrix.swift-version }}
-      - name: Run swift --version
-        run: swift --version
+          swiftly install --use ${{ matrix.swift-version }}
+          swift --version
       - name: Run swift build
         run: swift build
       - name: Run swift test
