--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         run: >
           curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz &&
           tar zxf swiftly-$(uname -m).tar.gz &&
-          ./swiftly init --skip-install --quiet-shell-followup &&
+          ./swiftly init --assume-yes --skip-install &&
           . ~/.local/share/swiftly/env.sh &&
           hash -r
       - name: Install Swift ${{ matrix.swift-version }}
