--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,6 @@ jobs:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
     steps:
       - uses: actions/checkout@v4
-      - name: Run swift build
-        run: swift build
       - name: Run swift test
         run: swift test
 
@@ -34,18 +32,16 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install libcurl4-openssl-dev
-      - name: Install Swiftly
+      - name: Install Swift ${{ matrix.swift-version }}
         run: >
           curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz &&
           tar zxf swiftly-$(uname -m).tar.gz &&
           ./swiftly init --assume-yes --skip-install &&
           . ~/.local/share/swiftly/env.sh &&
-          hash -r
-      - name: Install Swift ${{ matrix.swift-version }}
-        run: |
-          swiftly install --use ${{ matrix.swift-version }}
+          hash -r &&
+          swiftly install --use ${{ matrix.swift-version }} &&
           swift --version
-      - name: Run swift build
-        run: swift build
       - name: Run swift test
-        run: swift test
+        run: |
+          . ~/.local/share/swiftly/env.sh
+          swift test
