--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
   test-on-linux:
     strategy:
       matrix:
-        swift-version: ['6.1']
+        swift-version: ['6.1', '6.0', '5.10']
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
