--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   test-on-macos:
     strategy:
       matrix:
-        xcode-version: ['16.3']
+        xcode-version: ['16.4', '16.2']
     runs-on: macos-15
     timeout-minutes: 3
     env:
@@ -23,7 +23,7 @@ jobs:
   test-on-linux:
     strategy:
       matrix:
-        swift-version: ['6.1', '6.0', '5.10']
+        swift-version: ['6.1', '6.0']
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
