--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
   test-on-macos:
     strategy:
       matrix:
-        xcode-version: ['16.4', '16.2']
+        xcode-version: ['26.1', '16.4', '16.2']
     runs-on: macos-15
-    timeout-minutes: 3
+    timeout-minutes: 5
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode-version }}.app
     steps:
@@ -23,9 +23,9 @@ jobs:
   test-on-linux:
     strategy:
       matrix:
-        swift-version: ['6.1', '6.0']
+        swift-version: ['6.2', '6.1', '6.0']
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
       - name: Install Dependencies
